syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetStockPrices (GetPriceRequest) returns (stream GetPriceReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GetPriceRequest {
  string stockId = 1;
}

message GetPriceReply {
  string stockId = 1;
  double price = 2;
}
